<resources>
    <string name="app_name" translatable="false">TorChat</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="title_activity_login">Sign in</string>

    <string name="location">Location</string>
    <string name="cant_read_folder">folder can\'t be read!</string>
    <string name="nnew">New</string>
    <string name="select">Select</string>
    <string name="file_name">File name:</string>
    <string name="cancel">Cancel</string>
    <string name="create">Save</string>
    <string name="no_data">No Data</string>
    <color name="gray">#ffff0000</color>
    <string name="err">Error</string>

    <!-- Strings related to login -->
    <string name="note_error_input_data">Incorrect data!</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_reg_step_two">Next</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_activity_register">Registration</string>

    <string name="action_save_profile">Save changes</string>

    <string name="title_activity_profile">Profile</string>

    <string name="title_activity_user_profile">User profile</string>

    <string name="title_activity_contacts">Contacts</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <!-- Owner-related constants -->
    <string name="anonymous_name">anonymous</string>
    <string name="no_uid" translatable="false">no$uid</string>
    <string name="title_activity_settings">Application Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_security">Security</string>

    <string name="pref_title_paranoid_mode">Enable paranoid mode</string>
    <string name="pref_description_paranoid_mode">Use TOR-only connections, onion version of messagesThread.
        See help for additional information.
    </string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_create">Create</string>
    <string name="action_edit_contact">Edit</string>
    <string name="description_make_photo">Make photo</string>
    <string name="description_upload_photo">Upload photo</string>
    <string name="description_insert_emoticon">Insert emoticon</string>
    <string name="hint_input_message">Message</string>
    <string name="hint_login">Login</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_about">About me</string>
    <string name="find_friends">Find Friends</string>
    <string name="contacts">Contacts</string>
    <string name="description_send_message">Send message</string>
    <string name="hint_add_contacts_to_dialog">Add contacts to dialog...</string>
    <string name="option_allow_without_TOR">Allow connection without TOR</string>
    <string name="hint_email">E-Mail</string>
    <string name="hint_phone">Phone</string>
    <string name="add_to_contacts">Add to contacts</string>
    <string name="description_menu_action_icon">Menu action icon</string>
    <string name="description_user_picture">User picture</string>
    <string name="description_application_logo">Application logo</string>
    <string name="title_activity_chats">Dialogs</string>
    <string name="action_show_profile">Profile</string>
    <string name="action_group_chats">Group chats</string>
    <string name="action_help">Help</string>
    <string name="action_log_out">Log out</string>
    <string name="title_activity_create_group_dialog">Create Group Dialog</string>
    <string name="title_activity_dialog">Dialog</string>
    <string name="prompt_email" translatable="false">E-Mail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_group_dialog_edit" translatable="false">GroupDialogEditActivity</string>
    <string name="title_activity_scrolling" translatable="false">ScrollingActivity</string>

</resources>
