<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ru.mail.park.chat.activities.ContactsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/app_bar"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"

            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/app_bar"
        android:padding="10dp"
        android:id="@+id/findFriends"
        android:background="?attr/selectableItemBackground"
        android:clickable="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:contentDescription="@string/add_to_contacts"
            android:src="@drawable/ic_person_add_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/find_friends"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:id="@+id/textView" />
    </LinearLayout>

    <EditText
        android:id="@+id/chatName"
        android:lines="1"
        android:inputType="text"
        android:hint="Chat name"
        android:layout_below="@+id/findFriends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/choosen_contacts_list"
        android:lines="2"
        android:inputType="none"
        android:focusable="false"
        android:hint="@string/hint_add_contacts_to_dialog"
        android:layout_below="@+id/chatName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/contacts"
        android:id="@+id/textView2"
        android:layout_below="@+id/choosen_contacts_list"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/findFriends"
        android:layout_alignEnd="@+id/findFriends"
        android:background="#e0e0e0"
        android:clickable="false"
        android:padding="10dp"
        android:textColor="#616161" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <android.support.v7.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contactsView"
            tools:listitem="@layout/element_contact"/>

    </android.support.v4.widget.SwipeRefreshLayout>

</RelativeLayout>
